Fix members directory on mobile, adds link to instructions to add to directory (closes #34)

--- a/_sass/components/_members.scss
+++ b/_sass/components/_members.scss
@@ -19,4 +19,7 @@ div.members{
     p {
         margin: 0;
     }
+    table {
+        table-layout:fixed;
+    }
 }
